project/erp-cbz/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 8080
  rules:
    - host: "NODEIP:LoadBalancer"
      http:
        paths:
        - path: /student
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 8080
